# expense-dashboard

./: .gitignore  DEVELOPMENT.md  README.md  config.py  docker-compose.yml  expense_parsing_results.csv  main.py  requirements.txt  setup.sh  start-dev.sh
backend/: .env.dev.example  .env.example  README.md  alembic.ini  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  start.sh
backend/alembic/: env.py
backend/routers/: chatbot_router.py  expense_router.py
backend/services/: nlp_service.py  notion_service.py
backend/src/: config.py  main.py  models.py
backend/src/routers/: chatbot_router.py  expense_router.py
backend/src/services/: llm_service.py  nlp_service.py  notion_service.py
frontend/: App.jsx  app.js  index.html  package-lock.json  package.json  style.css  tailwind.config.js  vite.config.js
frontend-react/: .env.dev.example  README-Frontend.md  index.html  package-lock.json  package.json
frontend-react/src/: App-new.css  App.css  App.jsx
frontend-react/src/components/: ChatInterface.css  ChatInterface.jsx  ErrorToast.css  ErrorToast.jsx  ExpenseDetails.css  ExpenseDetails.jsx  Header.css  Header.jsx  Message.css  Message.jsx  WelcomeScreen.css  WelcomeScreen.jsx
frontend-react/src/utils/: api.js
frontend/src/: api.js  index.css
install/: Dockerfile.backend  Dockerfile.frontend
routers/: chatbot_router.py  expense_router.py
scripts/: build-frontend.sh
services/: __init__.py  nlp_service.py  notion_service.py
